# mdview

./: .flake8  Makefile  README.md  mdview.py  pyproject.toml  sample.md
mdview/: __init__.py  __main__.py  cli.py  renderer.py
tests/: test_renderer.py
