[project]
name = "mdview"
version = "0.1.0"
description = "Markdown viewer with GitHub-style rendering"
authors = [
    {name = "Russel Lane", email = "russel@rlane.com"},
]
dependencies = [
    "markdown>=3.10",
    "pygments>=2.19.2",
    "pywebview>=6.1",
]
requires-python = "==3.12.*"
license = {text = "MIT"}

[project.scripts]
mdview = "mdview:main"

[tool.pdm]
distribution = true
